<resources>
    <string name="app_name">My Kinopoisk</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_hello_image">firstHelloImage</string>
    <string name="know_premiers">Узнавай \nо премьерах</string>
    <string name="skip">Пропустить</string>
    <string name="second_hello_image">secondHelloImage</string>
    <string name="create_collections">Создавай \nколлекции</string>
    <string name="share_friends">Делись \nс друзьями</string>
    <string name="hello_first">helloFirst</string>
    <string name="hello_second">helloSecond</string>
    <string name="hello_third">helloThird</string>
    <string name="loading">loading</string>
    <string name="image_film">imageFilm</string>
    <string name="film_name">Film name is here</string>
    <string name="film_genre">Film genre is here</string>
    <string name="reiting">7.8</string>
    <string name="Premiers">Премьеры</string>
    <string name="popular">Популярное</string>
    <string name="first_random_text">First random text is here</string>
    <string name="second_random_text">Second random text is here</string>
    <string name="top250">Топ 250</string>
    <string name="serials">Сериалы</string>
    <string name="all">Все</string>
    <string name="list_name">List name is here</string>
    <string name="back_button">back_button</string>
    <string name="country_time_age">Россия, 1ч 33мин, 16+</string>
    <string name="year_genres">2020, драма, приключения</string>
    <string name="rating_name">6.4 Китобой</string>
    <string name="description_film">Чукотский парень влюбляется в американскую вебкам-модель. Приз Венеции, Кристина Асмус в роли девушки мечты \n\nВсе меняется в жизни юного чукотского охотника Лёшки с появлением в поселке интернета. Он влюбляется — впервые и сильно — в молчаливую девушку</string>
    <string name="starred_id_film">В фильме снимались</string>
    <string name="actor_name">Владимир Онохов</string>
    <string name="actor_descr">Актер</string>
    <string name="working_on_film">Над фильмом работали</string>
    <string name="galery">Галерея</string>
    <string name="different_films">Похожee</string>
    <string name="show_all">%s ></string>
    <string name="full_actor_name">Кристина Асмус</string>
    <string name="actor_profess">Актриса</string>
    <string name="filmography">Фильмография</string>
    <string name="on_list"><![CDATA[К списку >]]></string>
    <string name="s_films">%s фильмов</string>
    <string name="galery_name">Галерея</string>
    <string name="content">%s</string>
    <string name="filmography_name">Фильмография</string>
    <string name="_2021">2021</string>
    <string name="starred_in_serial">В сериале снимались</string>
    <string name="working_on_serial">Над сериалом работали</string>
    <string name="sesons_series">1 сезон, 1 серия</string>
    <string name="seasons_title">Сезоны и серии</string>
    <string name="season">Сезон</string>
    <string name="seriya_name">1 серия. Введение</string>
    <string name="seriya_date">26 марта 2020</string>
    <string name="searach_text">Фильмы, актёры, режиссёры</string>
    <string name="search_settings">Нaстройки поиска</string>
    <string name="show_filter">Показывать</string>
    <string name="films_setings">Фильмы</string>
    <string name="serials_settings">Сериалы</string>
    <string name="country">Страна</string>
    <string name="russia">Россия</string>
    <string name="sortir_filter">Сортировать</string>
    <string name="on_show_state">Не просмотрен</string>
    <string name="date_set">Дата</string>
    <string name="popular_set">Популярность</string>
    <string name="rating_set">Рейтинг</string>
    <string name="profile_title">Профиль</string>
    <string name="watching_yet">Просмотрено</string>
    <string name="collections_text">Коллекции</string>
    <string name="create_collection">Создать свою коллекцию</string>
    <string name="show_all_text">Показать все</string>
    <string name="actors">Актеры</string>
    <string name="still">Кадры</string>
    <string name="shooting">Со съемок</string>
    <string name="posters">Постеры</string>
    <string name="director">Режисер</string>
    <string name="producer">Продюсер</string>
    <string name="writer">Художник</string>
    <string name="actor">Актер</string>
    <string name="voice_actor">Актер дубляжа</string>
    <string name="play_me">Играет саму себя</string>
    <string name="genre">Жанр</string>
    <string name="from_to">c %s до %</string>
    <string name="rating_settings">Рейтинг</string>
    <string name="luboy">Любой</string>
    <string name="year_settings">Год</string>
    <string name="lubaya">Любая</string>
    <string name="season_settings">Период</string>
    <string name="apply">Выбрать</string>
    <string name="search_from">Искать в период с</string>
    <string name="search_to">Искать в период до</string>
    <string name="films_actors_directrs">Фильмы, актёры, режиссёры</string>
    <string name="interested_yet">Вам было интересно</string>
    <string name="ready">Готово</string>
    <string name="enter_collection_name">Введите название коллекции</string>
    <string name="error_text">Ошибка!</string>
    <string name="error_descr">Во время обработки запросa произошла ошибка</string>
    <string-array name="values_range_rating">
        <item>0</item>
        <item>10</item>
    </string-array>
</resources>